fix text wrap in messages from and to teachers

--- a/ungiorno-mobile/ungiorno-mobile-insegnante/www/css/style.css
+++ b/ungiorno-mobile/ungiorno-mobile-insegnante/www/css/style.css
@@ -1585,3 +1585,7 @@ ion-content .scroll {
     margin-bottom: 4px;
     text-align: center;
 }
+
+.note-text {
+    text-align: justify;
+}
